--- a/DT_HR.Application/DT_HR.Application.csproj
+++ b/DT_HR.Application/DT_HR.Application.csproj
@@ -6,4 +6,17 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Content Include="Core\.DS_Store" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
+      <PackageReference Include="Npgsql" Version="9.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\DT_HR.Domain\DT_HR.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
