--- a/DT_HR.Persistence/DT_HR.Persistence.csproj
+++ b/DT_HR.Persistence/DT_HR.Persistence.csproj
@@ -6,4 +6,20 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Extentions\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\DT_HR.Application\DT_HR.Application.csproj" />
+      <ProjectReference Include="..\DT_HR.Domain\DT_HR.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6" />
+      <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="9.0.6" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    </ItemGroup>
+
 </Project>
