Implements check-in functionality with location validation
Adds core check-in system components including:
- Location-based validation for office proximity
- Telegram bot integration for user notifications
- Input validation and error handling
- Success/failure callbacks with formatted messages

Introduces support services and interfaces for location verification and Telegram communication. Includes user registration functionality with phone number validation and duplicate checking.

--- a/DT_HR.Domain/DT_HR.Domain.csproj
+++ b/DT_HR.Domain/DT_HR.Domain.csproj
@@ -16,4 +16,8 @@
       <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="9.0.6" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\DT_HR.Contract\DT_HR.Contract.csproj" />
+    </ItemGroup>
+
 </Project>
