--- a/DT_HR.Application/DT_HR.Application.csproj
+++ b/DT_HR.Application/DT_HR.Application.csproj
@@ -13,9 +13,11 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
       <PackageReference Include="Npgsql" Version="9.0.3" />
+      <PackageReference Include="Telegram.Bot" Version="22.5.1" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\DT_HR.Contract\DT_HR.Contract.csproj" />
       <ProjectReference Include="..\DT_HR.Domain\DT_HR.Domain.csproj" />
     </ItemGroup>
 
