Check absence completed

--- a/DT_HR.Contract/DT_HR.Contract.csproj
+++ b/DT_HR.Contract/DT_HR.Contract.csproj
@@ -5,5 +5,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
-
+    
+    <ItemGroup>
+    <ProjectReference Include="..\DT_HR.Application\DT_HR.Application.csproj" />
+    </ItemGroup>
 </Project>
