--- a/DT_HR.Services/DT_HR.Services.csproj
+++ b/DT_HR.Services/DT_HR.Services.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.6" />
+      <PackageReference Include="Telegram.Bots.Extensions.Polling" Version="5.9.0" />
     </ItemGroup>
 
 </Project>
