feat: Add user language support across various services and commands and bug fixes

--- a/DT_HR.Api/appsettings.json
+++ b/DT_HR.Api/appsettings.json
@@ -9,9 +9,9 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=DTHR;Username=postgres;Password=dthrdb"
   },
   "Telegram": {
-    "BotToken": "8040302806:AAGrZbIqhMWAYt1A_WDjpXJMQ6x75f234Ro",
+    "BotToken": "",
     "UseWebhook": true,
-    "WebhookUrl": "https://00f7-83-222-6-254.ngrok-free.app"
+    "WebhookUrl": "https://7da7-83-222-6-254.ngrok-free.app"
   },
   "Office": {
     "Latitude": 41.332073,
