--- a/DT_HR.Api/appsettings.json
+++ b/DT_HR.Api/appsettings.json
@@ -9,7 +9,7 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=DTHR;Username=postgres;Password=dthrdb"
   },
   "Telegram": {
-    "BotToken": "",
+    "BotToken": "8040302806:AAGrZbIqhMWAYt1A_WDjpXJMQ6x75f234Ro",
     "UseWebhook": true,
     "WebhookUrl": "https://7da7-83-222-6-254.ngrok-free.app"
   },
