--- a/DT_HR.Persistence/DT_HR.Persistence.csproj
+++ b/DT_HR.Persistence/DT_HR.Persistence.csproj
@@ -13,7 +13,7 @@
     <ItemGroup>
       <ProjectReference Include="..\DT_HR.Application\DT_HR.Application.csproj" />
       <ProjectReference Include="..\DT_HR.Domain\DT_HR.Domain.csproj" />
-      <ProjectReference Include="..\DT_HR.Services\DT_HR.Services.csproj" />
+      <ProjectReference Include="..\DT_HR.Infrastructure\DT_HR.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
