--- a/DT_HR.Infrastructure/DT_HR.Infrastructure.csproj
+++ b/DT_HR.Infrastructure/DT_HR.Infrastructure.csproj
@@ -11,6 +11,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Hangfire" Version="1.8.20" />
+      <PackageReference Include="Hangfire.Core" Version="1.8.20" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.6" />
       <PackageReference Include="Telegram.Bots.Extensions.Polling" Version="5.9.0" />
     </ItemGroup>
