--- a/DT_HR.Infrastructure/DT_HR.Infrastructure.csproj
+++ b/DT_HR.Infrastructure/DT_HR.Infrastructure.csproj
@@ -16,6 +16,7 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.6" />
       <PackageReference Include="Telegram.Bots.Extensions.Polling" Version="5.9.0" />
+      <PackageReference Include="TimeZoneConverter" Version="7.0.0" />
     </ItemGroup>
 
 </Project>
