--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+.DS_Store
+CLAUDE.md
+
 # Mono auto generated files
 mono_crash.*
 
