--- a/DT_HR.Api/appsettings.json
+++ b/DT_HR.Api/appsettings.json
@@ -11,7 +11,7 @@
   "Telegram": {
     "BotToken": "8040302806:AAGrZbIqhMWAYt1A_WDjpXJMQ6x75f234Ro",
     "UseWebhook": true,
-    "WebhookUrl": "https://adbb-83-222-6-254.ngrok-free.app"
+    "WebhookUrl": "https://dc0b-83-222-6-254.ngrok-free.app"
   },
   "Office": {
     "Latitude": 41.332073,
