--- a/DT_HR.Infrastructure/DT_HR.Infrastructure.csproj
+++ b/DT_HR.Infrastructure/DT_HR.Infrastructure.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="EPPlus" Version="7.5.2" />
       <PackageReference Include="Hangfire" Version="1.8.20" />
       <PackageReference Include="Hangfire.Core" Version="1.8.20" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
