feat: Integrate PostgreSQL storage for Hangfire and add manager settings functionality

--- a/DT_HR.Api/appsettings.json
+++ b/DT_HR.Api/appsettings.json
@@ -11,12 +11,13 @@
   "Telegram": {
     "BotToken": "8040302806:AAGrZbIqhMWAYt1A_WDjpXJMQ6x75f234Ro",
     "UseWebhook": true,
-    "WebhookUrl": "https://dc0b-83-222-6-254.ngrok-free.app"
+    "WebhookUrl": "https://5e0285d9a938.ngrok-free.app",
+    "MiniAppUrl": "https://5e0285d9a938.ngrok-free.app/miniapp/"
   },
   "Office": {
-    "Latitude": 41.332073,
-    "Longitude": 69.340047,
-    "RadiusInMeters": 200
+    "Latitude": 41.331971,
+    "Longitude": 69.340092,
+    "RadiusInMeters": 100
   },
   "AllowedHosts": "*",
   "EnableSensitiveDataLogging": false,
