feat: Add Telegram Calendar integration and related services for event management

--- a/DT_HR.Contract/DT_HR.Contract.csproj
+++ b/DT_HR.Contract/DT_HR.Contract.csproj
@@ -5,6 +5,10 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Telegram.CalendarKit" Version="1.0.2" />
+    </ItemGroup>
     
     
 </Project>
