--- a/DT_HR.Persistence/DT_HR.Persistence.csproj
+++ b/DT_HR.Persistence/DT_HR.Persistence.csproj
@@ -26,6 +26,7 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6" />
       <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="9.0.6" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+      <PackageReference Include="Telegram.CalendarKit" Version="1.0.2" />
     </ItemGroup>
 
     <ItemGroup>
