--- a/DT_HR.Api/DT_HR.Api.csproj
+++ b/DT_HR.Api/DT_HR.Api.csproj
@@ -17,6 +17,7 @@
         </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
         <PackageReference Include="Telegram.Bot" Version="22.5.1" />
+        <PackageReference Include="Telegram.CalendarKit" Version="1.0.2" />
     </ItemGroup>
 
     <ItemGroup>
