--- a/DT_HR.Application/DT_HR.Application.csproj
+++ b/DT_HR.Application/DT_HR.Application.csproj
@@ -14,6 +14,7 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
       <PackageReference Include="Npgsql" Version="9.0.3" />
       <PackageReference Include="Telegram.Bot" Version="22.5.1" />
+      <PackageReference Include="Telegram.CalendarKit" Version="1.0.2" />
     </ItemGroup>
 
     <ItemGroup>
